<resources>
    <string name="app_name">Centro en línea</string>
    <string name="app_name_short">Centro en línea</string>
    <string name="app_lema">Centro Somos Todos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigator Bar -->
    <string name="action_inicio">Login</string>
    <string name="action_boletin">Boletin Oficial</string>
    <string name="action_quienes_somos">Quienes Somos</string>
    <string name="action_certificaciones">Certificaciones</string>
    <string name="action_cerrar_session">Logout</string>
    <string name="action_directorio">Directorio</string>
    <string name="action_proceso_admision">Proceso de Admisión</string>
    <string name="action_mapa_ubicacion">Mapa de Ubicación</string>
    <string name="action_beneficios">Beneficios</string>
    <string name="action_desarrollador">Desarrollador</string>

    <!-- Menu Tutores y Alumnos -->
    <string name="action_close_session">Cerrar Sesión</string>

    <string name="title_activity_login">Ingresar al Sistema</string>
    <string name="title_activity_registry">Registro de Nuevo Usuario</string>
    <string name="title_activity_reportar">Enviar un reporte</string>
    <string name="title_activity_imagenes">Mis Imágenes</string>
    <string name="title_activity_imagen_view">Foto</string>

    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_lactivityn">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username (email):</string>
    <string name="prompt_password">Password:</string>
    <string name="prompt_re_email">Re-Username (email):</string>
    <string name="prompt_re_password">Re-Password:</string>
    <string name="lbl_img_reporte">Imagen:</string>
    <string name="lbl_foto">Reporte:</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="action_sign_in_message">Olvidaste tu contraseña? envía un email para iniciar con el proceso de recuperación de contraseña. </string>
    <string name="action_registry_in">Guardar</string>
    <string name="action_registry_in_short">Guardar</string>
    <string name="action_registry_in_message">Proporcione un corre electrónico para validar sus datos y posteriormente vaya a su cuenta de correo y valide el email que le fue enviado. </string>
    <string name="action_reportar_in">Reportar</string>
    <string name="action_reportar_in_short">Reportar</string>
    <string name="action_reportar_in_message">Proporcione un corre electrónico para validar sus datos y posteriormente vaya a su cuenta de correo y valide el email que le fue enviado. </string>
    <!--
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    -->
    <!-- Cardview Hijos-->
    <string name="headerHijosTable">Alumnos</string>
    <string name="nombreAlumno">label</string>
    <string name="idalu">data</string>
    <string name="cvImgLeftHijos">0.25</string>
    <string name="cvTextHijo">0.75</string>
    <string name="cvImgRightHijos">0.25</string>
    <string name="title_activity_lista_elementos">ListaElementos</string>

    <!-- Otros -->
    <string name="menu">.</string>
    <string name="idmenu">0</string>

    <string name="elemento">Elemento</string>
    <string name="idelemento">IdElemento</string>

    <string name="ok_text">OK</string>
    <string name="option_yes">Si</string>
    <string name="option_no">No</string>

    <string name="sendme_email">centroenlinea@villahermosa.gob.mx</string>

    <string name="photo_source">Origen de tu foto</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>

    <string name="reparacion_de_baches">Reparación de Baches</string>
    <string name="fuga_de_agua">Fuga de Agua</string>
    <string name="recoleccion_de_basura">Recolección de Basura</string>
    <string name="reparacion_luminarias">Reparación de Luminarias</string>


</resources>
