<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/em16"
    android:paddingTop="@dimen/em32"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegistryActivity">

    <ScrollView
        android:id="@+id/registry_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_registry_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/banner_logo_top_2"
                />
            
            <!-- Email 1 -->
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/em16"
                android:layout_width="match_parent"
                android:background="@color/primary_light"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!-- Email 2 -->
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/em16"
                android:layout_width="match_parent"
                android:background="@color/primary_light"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/re_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_re_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password 1 -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/registry1"
                    android:imeActionLabel="@string/action_registry_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password 2 -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_light"
                >

                <EditText
                    android:id="@+id/re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_re_password"
                    android:imeActionId="@+id/registry2"
                    android:imeActionLabel="@string/action_registry_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            
            <Button
                android:id="@+id/btnRegistry"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_registry_in_message"
                />

            <TextView
                android:id="@+id/lblEnvianosUnEmail"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="false"
                android:linksClickable="false"
                android:autoLink="all"
                android:text="@string/sendme_email"
                android:textColor="@color/colorPrimary"
                android:onClick="SendUsEmail"
                android:textSize="@dimen/em18"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
