<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_menu_hijos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/em8"
    android:layout_marginLeft="@dimen/em8"
    card_view:cardCornerRadius="@dimen/cvRadioCornerHijos"
    android:layout_marginBottom="@dimen/cvBottomMarginHijos"
    >

    <LinearLayout
        android:id="@+id/lyHijos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:src="@drawable/ic_menu_camera"
            android:layout_height="@dimen/em32"
            android:layout_width="@dimen/em4"
            android:layout_weight="@string/cvImgLeftHijos"
            android:paddingTop="@dimen/em8"/>

        <LinearLayout
            android:layout_width="@dimen/em64"
            android:layout_height="wrap_content"
            android:layout_weight="@string/cvTextHijo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHijo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/em16"
                android:textColor="@color/input_register_hint"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/cvImgLeftHijos"

                />

            <TextView
                android:id="@+id/tvGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/em12"
                android:layout_gravity="center_vertical"
                android:textColor="@color/input_login_hint"
                android:layout_weight="@string/cvImgLeftHijos"

                />


        </LinearLayout>

        <ImageView
            android:src="@drawable/ic_menu_gallery"
            android:layout_height="@dimen/em32"
            android:layout_width="@dimen/em4"
            android:layout_gravity="right"
            android:layout_weight="@string/cvImgRightHijos"
            android:paddingTop="@dimen/em8"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>